--- a/notebooks/my-1st-notebook.ipynb
+++ b/notebooks/my-1st-notebook.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "rand_int2 = np.random.randint(10,90,(10,3) # random numpy array of shape (10,3)\n",
+    "rand_int2 = np.random.randint(10,90,(10,3)) # random numpy array of shape (10,3)\n",
     "\n",
     "print(\"Second array\", rand_int2)"
    ]
